--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
         <div><strong>Student:</strong> Thoran Kumar Cherukuru Ramesh</div>
         <div><strong>Student ID:</strong> s224967779</div>
         <div><strong>Task:</strong> 6.2C Landing Page</div>
-        <div><strong>Unit:</strong> SIT317/SIT726</div>
+        <div><strong>Unit:</strong> SIT726</div>
     </div>
 
     <script>
